--- a/Getting_Data.ipynb
+++ b/Getting_Data.ipynb
@@ -59,21 +59,18 @@
     "\n",
     "    base_dir = f\"https://www.sec.gov/Archives/edgar/data/{cik_int}/{accession_nodashes}/\"\n",
     "\n",
-    "    #Get directory listing\n",
     "    index_url = base_dir + \"index.json\"\n",
     "    idx_resp = requests.get(index_url, headers=HEADERS)\n",
     "    idx_resp.raise_for_status()\n",
     "    idx = idx_resp.json()\n",
     "    items = idx[\"directory\"][\"item\"]\n",
     "\n",
-    "    #Try to match primary_doc exactly\n",
     "    html_name = None\n",
     "    for it in items:\n",
     "        if it[\"name\"].lower() == primary_doc.lower():\n",
     "            html_name = it[\"name\"]\n",
     "            break\n",
     "\n",
-    "    #Fallback: pick a reasonable HTML file\n",
     "    if html_name is None:\n",
     "        candidates = [it[\"name\"] for it in items\n",
     "                      if it[\"name\"].lower().endswith((\".htm\", \".html\"))]\n",
@@ -81,7 +78,7 @@
     "        if not candidates:\n",
     "            raise ValueError(f\"No HTML file found in {index_url}\")\n",
     "\n",
-    "        # Prefer filenames that look like 10-K\n",
+    "\n",
     "        tenk_candidates = [c for c in candidates if \"10k\" in c.lower()]\n",
     "        html_name = tenk_candidates[0] if tenk_candidates else candidates[0]\n",
     "\n",
@@ -110,7 +107,7 @@
    "source": [
     "def get_company_filings(cik: str, form_type: str = \"10-K\", limit: int = 10) -> pd.DataFrame:\n",
     "\n",
-    "    cik_padded = cik.zfill(10)  # SEC wants 10-digit CIK in this endpoint\n",
+    "    cik_padded = cik.zfill(10)\n",
     "    url = f\"https://data.sec.gov/submissions/CIK{cik_padded}.json\"\n",
     "\n",
     "    resp = requests.get(url, headers=HEADERS)\n",
@@ -145,7 +142,7 @@
     "    df = pd.DataFrame(data).T\n",
     "\n",
     "    cik = df.loc[df[\"ticker\"] == ticker.upper(), \"cik_str\"].values[0]\n",
-    "    cik = str(cik).zfill(10)  # SEC format\n",
+    "    cik = str(cik).zfill(10)\n",
     "    return cik"
    ],
    "id": "bc791ef3d41e04f",
